# DigitalCurator

./: pyproject.toml
.kiro/specs/digital-curator-mvp/: .config.kiro  design.md  requirements.md  tasks.md
digital_curator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  ComparisonView.tsx  SettingsPanel.tsx  ThumbnailCard.tsx  api.ts  types.ts
frontend/src/hooks/: useDecisionSync.ts
host/: __init__.py  api.py  data_manager.py  decision_sync.py  duplicate_detector.py  indexer.py  main.py  models.py  quality_assessor.py  scanner.py  screenshot_detector.py  thumbnail_generator.py  trash_manager.py
host/db/: __init__.py  init.py  schema.py
tests/unit/: test_data_manager.py  test_decision_sync.py  test_duplicate_detector.py  test_quality_assessor.py  test_screenshot_detector.py  test_thumbnail_generator.py
